--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.2.0"
+    "consola": "^3.4.0",
+    "element-plus": "^2.9.5",
+    "sass-embedded": "^1.85.1",
+    "unplugin-vue-components": "^28.4.1",
+    "vite": "^6.2.0",
+    "vite-plugin-style-import": "^2.0.0"
   }
 }
